--- a/templates/success.html
+++ b/templates/success.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>success</title>
+    <title>save details</title>
   </head>
   <body>
-    <h2>Login successful</h2>
-    <a href="/viewprofile">View Profile</a>
+    <h3>Hi Admin, {{msg}}</h3>
+    <a href="/view">View Employees</a>
   </body>
 </html>
